--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -92,6 +92,7 @@
 ///*======================================================*/
 @import vendors/vendor-spinner
 @import vendors/vendor-fotorama
+@import vendors/vendor-toast
 
 ///*======================================================*/
 ///*PARTIALS 2*/
