--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -86,6 +86,7 @@
 @import components/product-card
 @import components/text-popup
 @import components/infobar
+@import components/popups
 
 ///*======================================================*/
 ///*VENDOR*/
@@ -93,6 +94,7 @@
 @import vendors/vendor-spinner
 @import vendors/vendor-fotorama
 @import vendors/vendor-toast
+@import vendors/vendor-magnific-popup
 
 ///*======================================================*/
 ///*PARTIALS 2*/
