--- a/src/sass/partials/_header.sass
+++ b/src/sass/partials/_header.sass
@@ -250,6 +250,9 @@
 	transition-property: background-color, opacity, visibility, transform
 	transition-duration: $animation-speed
 
+	.ea-site &
+		display: none
+
 	.no-touchevents &:hover
 		background-color: $bg-color-light
 
