--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -245,6 +245,12 @@ $animation-speed-section: 1s !default
 $animation-speed-element: 1s !default
 $animation-speed-element-delay: 0.8s !default
 
+// popups
+$default-popup-width: 960px !default
+$default-popup-space: 58px !default
+$default-popup-width--md: 768px !default
+$default-popup-space--md: 38px !default
+
 // fonts style
 $font-norm: 'proximanova-regular', sans-serif !default
 $font-black: 'proximanova-black', sans-serif !default
