--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3887,13 +3887,34 @@ input[type="radio"]:disabled ~ i::after {
 }
 
 .layout {
-	padding-right: 50px;
-	padding-left: 50px;
+	padding-right: 60px;
+	padding-left: 60px;
 	margin-right: auto;
 	margin-left: auto;
 }
 
-.main .layout, .header .layout {
+@media (max-width: 1919px) {
+	.layout {
+		padding-right: 40px;
+		padding-left: 40px;
+	}
+}
+
+@media (max-width: 979px) {
+	.layout {
+		padding-right: 30px;
+		padding-left: 30px;
+	}
+}
+
+@media (max-width: 767px) {
+	.layout {
+		padding-right: 20px;
+		padding-left: 20px;
+	}
+}
+
+.main .layout, .header .layout, .footer .layout {
 	padding: 0;
 }
 
@@ -4534,6 +4555,10 @@ input[type="radio"]:disabled ~ i::after {
 	transition-property: background-color, opacity, visibility, transform;
 	transition-property: background-color, opacity, visibility, transform, -webkit-transform;
 	transition-duration: 0.2s;
+}
+
+.ea-site .down-arrows {
+	display: none;
 }
 
 .no-touchevents .down-arrows:hover {
@@ -13583,6 +13608,110 @@ li.is-open > .catalog-menu__tab .catalog-menu__angle i::before, li.is-open > .ca
 }
 
 /* infobar end */
+/* popups */
+.default-popup {
+	max-width: 960px;
+	padding: 58px;
+	background-color: #f3f3f3;
+	margin-right: auto;
+	margin-left: auto;
+}
+
+@media (max-width: 1199px) {
+	.default-popup {
+		max-width: 768px;
+		padding: 38px;
+	}
+}
+
+@media (max-width: 479px) {
+	.default-popup {
+		padding-right: 20px;
+		padding-left: 20px;
+	}
+}
+
+.default-popup .form-buttons {
+	text-align: center;
+}
+
+.default-popup__title {
+	font-family: "proximanova-bold", sans-serif;
+	font-weight: normal;
+	font-style: normal;
+	margin-bottom: 4.8rem;
+	text-align: center;
+	font-size: 3.6rem;
+	line-height: 1.33;
+}
+
+@media (max-width: 1199px) {
+	.default-popup__title {
+		margin-bottom: 2.4rem;
+	}
+}
+
+@media (max-width: 979px) {
+	.default-popup__title {
+		font-size: 3rem;
+		line-height: 1.36;
+	}
+}
+
+@media (max-width: 639px) {
+	.default-popup__title {
+		font-size: 2.6rem;
+		line-height: 1.41;
+	}
+}
+
+.default-popup__title:last-child {
+	margin-bottom: 0;
+}
+
+.default-popup__content {
+	max-width: 450px;
+	margin-right: auto;
+	margin-left: auto;
+}
+
+button.mfp-close {
+	width: 40px;
+	height: 40px;
+	fill: white;
+	color: white;
+	opacity: 1;
+	background-color: #000;
+	right: auto;
+	top: 0;
+	left: 100%;
+	margin-left: 10px;
+}
+
+@media (max-width: 979px) {
+	button.mfp-close {
+		left: auto;
+		right: 0;
+		top: 0;
+		margin-left: 0;
+	}
+}
+
+button.mfp-close svg {
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	width: 20px;
+	height: 20px;
+	margin: -10px 0 0 -10px;
+	pointer-events: none;
+}
+
+button.mfp-close path {
+	fill: inherit;
+}
+
+/* popups end */
 .spinner {
 	position: relative;
 	display: inline-block;
@@ -14003,6 +14132,17 @@ li.is-open > .catalog-menu__tab .catalog-menu__angle i::before, li.is-open > .ca
 	border: 1px solid #ccc;
 }
 
+@media (max-width: 479px) {
+	#toast-container {
+		width: 100%;
+	}
+}
+
+#toast-container > div {
+	width: auto;
+	max-width: 320px;
+}
+
 #toast-container > div, #toast-container > div:hover {
 	padding: 17px 20px;
 	border-radius: 0;
@@ -14011,9 +14151,42 @@ li.is-open > .catalog-menu__tab .catalog-menu__angle i::before, li.is-open > .ca
 	color: black;
 }
 
+@media (max-width: 479px) {
+	#toast-container > div, #toast-container > div:hover {
+		padding: 8px 15px;
+	}
+}
+
+@media (max-width: 768px) and (min-width: 481px) {
+	#toast-container > div {
+		width: auto;
+		max-width: 240px;
+	}
+}
+
+@media (max-width: 479px) {
+	#toast-container > div {
+		width: 100%;
+		max-width: none;
+	}
+}
+
 .toast-bottom-left {
-	bottom: 40px;
-	left: 120px;
+	bottom: 14px;
+	left: 100px;
+}
+
+@media (max-width: 979px) {
+	.toast-bottom-left {
+		left: 20px;
+	}
+}
+
+@media (max-width: 479px) {
+	.toast-bottom-left {
+		left: 0;
+		bottom: -6px;
+	}
 }
 
 .toast-title {
@@ -14023,6 +14196,13 @@ li.is-open > .catalog-menu__tab .catalog-menu__angle i::before, li.is-open > .ca
 	font-size: 20px;
 	line-height: 24px;
 	margin-bottom: 5px;
+}
+
+@media (max-width: 479px) {
+	.toast-title {
+		font-size: 18px;
+		line-height: 22px;
+	}
 }
 
 .toast-title:last-child {
@@ -14037,7 +14217,74 @@ li.is-open > .catalog-menu__tab .catalog-menu__angle i::before, li.is-open > .ca
 	line-height: 24px;
 }
 
+@media (max-width: 479px) {
+	.toast-message {
+		font-size: 16px;
+		line-height: 20px;
+	}
+}
+
 /* fotorama end */
+/* magnific popup */
+.mfp-bg {
+	background-color: #3e3e3d;
+}
+
+.mfp-container {
+	max-width: none;
+}
+
+@media (max-width: 1919px) {
+	.mfp-container {
+		max-width: 100%;
+	}
+}
+
+/*
+ *
+ *====== Zoom effect ====== */
+.mfp-zoom-in {
+	/* start state */
+	/* animate in */
+	/* animate out */
+}
+
+.mfp-zoom-in .mfp-with-anim {
+	opacity: 0;
+	transition: all 0.2s ease-in-out;
+	-webkit-transform: scale(0.8);
+	    -ms-transform: scale(0.8);
+	        transform: scale(0.8);
+}
+
+.mfp-zoom-in.mfp-bg {
+	opacity: 0;
+	transition: all 0.3s ease-out;
+}
+
+.mfp-zoom-in.mfp-ready .mfp-with-anim {
+	opacity: 1;
+	-webkit-transform: scale(1);
+	    -ms-transform: scale(1);
+	        transform: scale(1);
+}
+
+.mfp-zoom-in.mfp-ready.mfp-bg {
+	opacity: 0.5;
+}
+
+.mfp-zoom-in.mfp-removing .mfp-with-anim {
+	-webkit-transform: scale(0.8);
+	    -ms-transform: scale(0.8);
+	        transform: scale(0.8);
+	opacity: 0;
+}
+
+.mfp-zoom-in.mfp-removing.mfp-bg {
+	opacity: 0;
+}
+
+/* magnific popup end */
 /*SIDE MENU*/
 .side-menu {
 	position: fixed;
