--- a/src/sass/components/_sliders.sass
+++ b/src/sass/components/_sliders.sass
@@ -120,6 +120,9 @@
 			transition-property: background, border, box-shadow, transform
 			transition-duration: 0.6s
 
+			.ea-site &
+				background-color: $base-color--ea
+
 			&::before
 				content: ''
 				position: absolute
